# aop2db

./: .bumpversion.cfg  .flake8  .gitignore  .readthedocs.yml  .travis.yml  MANIFEST.in  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
aop2db/: __init__.py  __main__.py  cli.py  constants.py  defaults.py  utils.py
aop2db/aop/: __init__.py  importer.py  query.py  utils.py
aop2db/orm/: __init__.py  manager.py  models.py
docs/: Makefile  conf.py  make.bat  requirements.txt  usage.rst
docs/source/: conf.py  index.rst  installation.rst  methods.rst
tests/: __init__.py  test_aop.py  test_cli.py  test_utils.py  test_zetomapdb.py
zetomapdb/: cli.py  constants.py  defaults.py  errors.py
zetomapdb/orm/: manager.py  models.py
