# Setup configuration

[metadata]
name = aop2db
version = 0.2.5
description = AOP2DB - Python parser for converting importing adverse outcome pathway data into a relational database.
long_description = file: README.rst
long_description_content_type = text/x-rst

# URLs
url = https://github.com/brucetony/aop2db

project_urls =
    Issue Tracker = https://github.com/brucetony/aop2db/issues
    Documentation = https://aop2db.readthedocs.io/en/latest/
    Source Code = https://github.com/brucetony/aop2db

# Author information
author = Bruce Schultz
author_email = bruce.schultz@scai.fraunhofer.de
maintainer = Bruce Schultz
maintainer_email = bruce.schultz@scai.fraunhofer.de

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics

keywords =
    Biomedical Database

[options]
install_requires =
    Click>=8.0
    pandas>=1.3.1
    tqdm>=4.62.0
    sqlalchemy>=1.4.22
    sqlalchemy_utils>=0.37.8
    pymysql>=1.0.2
    requests>=2.26.0
    xmltodict>=0.12.0
    cryptography>=35.0.0
    lxml>=4.6.5

# Random options
zip_safe = false
python_requires = >=3.7
include_package_data = True

# Where is my code
packages = find:

[options.packages.find]
include =
    aop2db
    aop2db.*

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    aop2db = aop2db.cli:main

########################
# Flake8 Configuration #
########################
[flake8]
ignore =
    A003 # class attribute "id" is shadowing a python builtin
    I202 # Additional newline in a group of imports.

exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs
max-complexity = 20
import-order-style = pycharm
max-line-length = 119


##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = aop2db
omit =
    aop2db/__main__.py
    tests/*
    docs/*

[coverage:paths]
source =
    aop2db
    .tox/*/lib/python*/site-packages/aop2db

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
